Projeto IdSoftware com Bootstrap4

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,6 +10,10 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <a class="navbar-brand" href="#">ID Websistemas</a>
+             <button class="navbar-toggler" type="button" data-toggle="collapse" 
+      data-target="#links-topo" aria-controls="links-topo" aria-expanded="false">  
+      <span class="navbar-toggler-icon"></span>
+  </button>
             <div class="collapse navbar-collapse" id=" links-topo">     
                 <ul class="navbar-nav mr-4">
                     <li class="nav-item">
